# LLM-Zoomcamp

./: .gitignore  Makefile  README.md  agents.ipynb  app.py  assistant.py  dashboard.py  db_feedback.py  db_init.py  db_query.py  db_save.py  ingest.py  judge.py  metrics.py  pyproject.toml  rag_helper.py
