[project]
name = "llm-zoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google>=3.0.0",
    "google-genai>=2.3.0",
    "jupyter>=1.1.1",
    "minsearch>=0.0.11",
    "openai>=2.37.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlitesearch>=0.0.4",
    "streamlit>=1.58.0",
]
